--- a/Internship/Udemy Vue/Section 3/1/styles.css
+++ b/Internship/Udemy Vue/Section 3/1/styles.css
@@ -20,7 +20,7 @@ header {
   text-align: center;
 }
 
-#user-goals {
+#user-tasks{
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   margin: 3rem;
   border-radius: 10px;
@@ -28,20 +28,20 @@ header {
   text-align: center;
 }
 
-#user-goals h2 {
+#user-tasks h2 {
   font-size: 2rem;
   border-bottom: 4px solid #ccc;
   color: #1b995e;
   margin: 0 0 1rem 0;
 }
 
-#user-goals ul {
+#user-tasks ul {
   list-style: none;
   margin: 1rem 0;
   padding: 0;
 }
 
-#user-goals li {
+#user-tasks li {
   margin: 1rem 0;
   font-size: 1.25rem;
   font-weight: bold;
@@ -51,18 +51,18 @@ header {
   border-radius: 25px;
 }
 
-#user-goals input {
+#user-tasks input {
   font: inherit;
   border: 1px solid #ccc;
 }
 
-#user-goals input:focus {
+#user-tasks input:focus {
   outline: none;
   border-color: #1b995e;
   background-color: #d7fdeb;
 }
 
-#user-goals button {
+#user-tasks button {
   font: inherit;
   cursor: pointer;
   border: 1px solid #ff0077;
@@ -72,8 +72,8 @@ header {
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.26);
 }
 
-#user-goals button:hover,
-#user-goals button:active {
+#user-tasks button:hover,
+#user-tasks button:active {
   background-color: #ec3169;
   border-color: #ec3169;
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.26);
